# threatiify

./: pyproject.toml  requirements.txt
threatify/: cli.py  webapp.py
threatify/core/: aggregator.py  config.py  correlator.py  detector.py
threatify/scanner/: file.py  network.py  process.py  startup.py
threatify/utils/: logger.py
