[project]
name = "threatify"
version = "0.1.0"
description = "Threatify - Behavioral threat detection CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "psutil>=5.9.8",
    "rich>=13.7.1",
    "streamlit>=1.56.0",
    "watchdog>=4.0.0",
]

[project.scripts]
threatify = "threatify.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = ["ruff", "pytest"]
